# django-migrations-ignore-attrs

./: .gitignore  .travis.yml  AUTHORS  CHANGES.rst  MANIFEST.in  README.rst  dev-requirements.txt  manage.py  requirements.txt  setup.cfg
django_migrations_ignore_attrs/management/commands/: __init__.py  makemigrations.py  migrate.py
docs/: Makefile  commands.rst  conf.py  index.rst  installation.rst  license.rst
test_project/: models.py  settings.py  tests.py
test_project/migrations/: 0001_initial.py
